--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -49,15 +49,17 @@
       const tFoot = table.tFoot;
       const tBodies = table.tBodies;
 
-      console.log(tBodies[0].rows);
-      console.log(tHead.rows);
-      console.log(tFoot.rows);
+      console.log(rows[0]);
 
-      console.log(tBodies);
-      console.log(tFoot);
-      console.log(caption);
-      console.log(tHead);
-      console.log(rows);
+      // console.log(tBodies[0].rows);
+      // console.log(tHead.rows);
+      // console.log(tFoot.rows);
+
+      // console.log(tBodies);
+      // console.log(tFoot);
+      // console.log(caption);
+      // console.log(tHead);
+      // console.log(rows);
     </script>
 
     <!-- <h1>Children: childNodes, firstChild, lastChild</h1>
