--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -49,7 +49,7 @@
       const tFoot = table.tFoot;
       const tBodies = table.tBodies;
 
-      console.log(rows[0]);
+      console.log(rows[1].cells);
 
       // console.log(tBodies[0].rows);
       // console.log(tHead.rows);
