--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -49,7 +49,8 @@
       const tFoot = table.tFoot;
       const tBodies = table.tBodies;
 
-      console.log(rows[1].cells);
+      console.log((rows[1].cells[0].style.backgroundColor = "red"));
+      console.log((rows[1].cells[0].style.color = "white"));
 
       // console.log(tBodies[0].rows);
       // console.log(tHead.rows);
