--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -49,6 +49,9 @@
       const tFoot = table.tFoot;
       const tBodies = table.tBodies;
 
+      console.log((tHead.rows[0].cells[0].style.backgroundColor = "green"));
+      console.log((tHead.rows[0].cells[0].style.color = "white"));
+
       console.log((rows[1].cells[0].style.backgroundColor = "red"));
       console.log((rows[1].cells[0].style.color = "white"));
 
