--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -55,6 +55,9 @@
       console.log((rows[1].cells[0].style.backgroundColor = "red"));
       console.log((rows[1].cells[0].style.color = "white"));
 
+      console.log((tFoot.rows[0].cells[0].style.backgroundColor = "black"));
+      console.log((tFoot.rows[0].cells[0].style.color = "white"));
+
       // console.log(tBodies[0].rows);
       // console.log(tHead.rows);
       // console.log(tFoot.rows);
