--- a/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
+++ b/part-2-browser-document-events-interfaces/document/resume/walking-the-dom.html
@@ -53,11 +53,19 @@
       const tFoot = table.tFoot;
       const tBodies = table.tBodies;
 
-      console.log(rows[0].sectionRowIndex);
-      console.log(rows[1].sectionRowIndex);
-      console.log(rows[2].sectionRowIndex);
-      console.log(rows[3].sectionRowIndex);
-      console.log(rows[4].sectionRowIndex);
+      const td = rows[2].cells[0];
+      console.log((td.style.backgroundColor = "red"));
+      console.log((td.style.color = "white"));
+
+      // console.log(rows[0].sectionRowIndex);
+      // console.log(rows[1].sectionRowIndex);
+      // console.log(rows[2].sectionRowIndex);
+      // console.log(rows[3].sectionRowIndex);
+      // console.log(rows[4].sectionRowIndex);
+
+      // console.log(rows[1].cells[1].cellIndex);
+      // console.log((rows[1].cells[1].style.backgroundColor = "purple"));
+      // console.log((rows[1].cells[1].style.color = "white"));
 
       // console.log(tBodies[1].rows[1].sectionRowIndex);
       // console.log(rows[3].sectionRowIndex);
