--- a/part-2-browser-document-events-interfaces/document/resume/tasks/dom-children.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/dom-children.html
@@ -14,6 +14,11 @@
       console.log(document.body.firstElementChild.nextElementSibling);
       console.log(document.body.children[1]);
       console.log(document.body.lastElementChild.previousElementSibling);
+
+      console.log(document.body.children[1].lastElementChild);
+      console.log(
+        document.body.lastElementChild.previousElementSibling.lastElementChild
+      );
     </script>
   </body>
 </html>
