--- a/part-2-browser-document-events-interfaces/document/resume/tasks/the-sibling-question.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/the-sibling-question.html
@@ -6,5 +6,11 @@
       1. Is it true that elem.lastChild.nextSibling is always null?
       2. Is it true that elem.children[0].previousSibling is always null?
     -->
+    <h1></h1>
+
+    <script>
+      const elem = document.body.firstElementChild;
+      // console.log(elem.lastChild.nextSibling);
+    </script>
   </body>
 </html>
