--- a/part-2-browser-document-events-interfaces/document/resume/tasks/the-sibling-question.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/the-sibling-question.html
@@ -10,7 +10,7 @@
 
     <script>
       const elem = document.body.firstElementChild;
-      // console.log(elem.lastChild.nextSibling);
+      console.log(elem.lastChild.nextSibling, true);
       console.log(elem.children[0].previousSibling);
     </script>
   </body>
