--- a/part-2-browser-document-events-interfaces/document/resume/tasks/select-all-diagonal-cells.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/select-all-diagonal-cells.html
@@ -49,5 +49,14 @@
         <td>5:5</td>
       </tr>
     </table>
+
+    <script>
+      const table = document.body.firstElementChild;
+
+      for (const row of table.rows) {
+        row.cells[row.rowIndex].style.backgroundColor = "red";
+        row.cells[row.rowIndex].style.color = "white";
+      }
+    </script>
   </body>
 </html>
