--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -6,8 +6,11 @@
     </div>
 
     <script>
-      const elem = document.getElementById("elem");
-      console.log((elem.style.backgroundColor = "red"));
+      console.log(
+        (document.getElementById("elem").style.backgroundColor = "red")
+      );
+
+      console.log((elem.style.color = "white"));
     </script>
   </body>
 </html>
