--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -11,6 +11,8 @@
       );
 
       console.log((elem.style.color = "white"));
+
+      console.log((window["elem-content"].style.padding = "5px 10px"));
     </script>
   </body>
 </html>
