--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -6,13 +6,7 @@
     </div>
 
     <script>
-      console.log(
-        (document.getElementById("elem").style.backgroundColor = "red")
-      );
-
-      console.log((elem.style.color = "white"));
-
-      console.log((window["elem-content"].style.padding = "5px 10px"));
+      const elem = document.getElementById("elem");
     </script>
   </body>
 </html>
