--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <div id="elem">
+    <!-- <h2>querySelector</h2> -->
+
+    <!-- <script>
+      console.log(
+        document.querySelectorAll("h2")[0] === document.querySelector("h2")
+      );
+    </script> -->
+
+    <!-- <h2>querySelectorAll</h2>
+
+    <ul>
+      <li>the</li>
+      <li>test</li>
+    </ul>
+
+    <ul>
+      <li>has</li>
+      <li>passed</li>
+    </ul> -->
+
+    <!-- <script>
+      const elements = document.querySelectorAll("ul > li:last-child");
+
+      for (const elem of elements) {
+        console.log(elem);
+      }
+    </script> -->
+
+    <!-- <div id="elem">
       <div id="elem-content">Element</div>
     </div>
 
-    <script>
-      const elem = document.getElementById("elem");
-    </script>
+    <button
+      id="elem"
+      type="button"
+    >
+      Say Hello
+    </button> -->
+
+    <!-- <script>
+      console.log(
+        (document.getElementById("elem").style.backgroundColor = "red")
+      );
+
+      // console.log((elem.style.color = "white"));
+
+      console.log((window["elem-content"].style.padding = "5px 10px"));
+
+      // var elem = 5;
+
+      // console.log(elem);
+
+      console.log(document.getElementById("elem"));
+
+      console.log("Only document.getElementById not elem.getElementById");
+    </script> -->
   </body>
 </html>
