--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h2>closest</h2>
+
+    <script>
+      console.log("ola");
+    </script>
+
+    <!-- <h2>matches</h2>
+
+    <a href="http://example.com/file.zip">...</a>
+    <a href="http://ya.ru">...</a> -->
+
+    <!-- <script>
+      for (const elem of document.body.children) {
+        if (elem.matches('a[href$="zip"]')) {
+          console.log("The archive reference", elem.href);
+        }
+      }
+    </script> -->
+
     <!-- <h2>querySelector</h2> -->
 
     <!-- <script>
