--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <form name="my-form">
-      <div class="article">Article</div>
-      <div class="long article">Long article</div>
-    </form>
+    <h1>Live collections</h1>
 
     <script>
       console.log("ola");
     </script>
+
+    <!-- <form name="my-form">
+      <div class="article">Article</div>
+      <div class="long article">Long article</div>
+    </form> -->
+
+    <!-- <script>
+      const form = document.getElementsByName("my-form")[0];
+      const articles = form.getElementsByClassName("article");
+      console.log(articles.length);
+
+      for (const article of articles) {
+        console.log(article.innerHTML);
+      }
+    </script> -->
 
     <!-- <h1>getElementsBy*</h1> -->
 
