--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -3,8 +3,17 @@
   <body>
     <h1>Live collections</h1>
 
+    <div>First div</div>
+
     <script>
-      console.log("ola");
+      const divs = document.getElementsByTagName("div");
+      console.log(divs.length);
+    </script>
+
+    <div>Second div</div>
+
+    <script>
+      console.log(divs.length);
     </script>
 
     <!-- <form name="my-form">
