--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -6,15 +6,28 @@
     <div>First div</div>
 
     <script>
-      const divs = document.getElementsByTagName("div");
-      console.log(divs.length);
+      const divs = document.querySelectorAll("div");
+      console.log(divs);
     </script>
 
     <div>Second div</div>
 
     <script>
-      console.log(divs.length);
+      console.log(divs);
     </script>
+
+    <!-- <div>First div</div> -->
+
+    <!-- <script>
+      const divs = document.getElementsByTagName("div");
+      console.log(divs.length);
+    </script> -->
+
+    <!-- <div>Second div</div> -->
+
+    <!-- <script>
+      console.log(divs.length);
+    </script> -->
 
     <!-- <form name="my-form">
       <div class="article">Article</div>
