--- a/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
+++ b/part-2-browser-document-events-interfaces/document/resume/get-element-query-selector.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Live collections</h1>
-
-    <div>First div</div>
+    <div id="hello">
+      Hello
+      <div id="how">
+        how
+        <div id="are">
+          are
+          <div id="you">you?</div>
+        </div>
+      </div>
+    </div>
 
     <script>
+      console.log(hello.contains(how));
+      console.log(hello.contains(are));
+      console.log(hello.contains(you));
+    </script>
+    <!-- <h1>Live collections</h1> -->
+
+    <!-- <div>First div</div> -->
+
+    <!-- <script>
       const divs = document.querySelectorAll("div");
       console.log(divs);
-    </script>
+    </script> -->
 
-    <div>Second div</div>
+    <!-- <div>Second div</div> -->
 
-    <script>
+    <!-- <script>
       console.log(divs);
-    </script>
+    </script> -->
 
     <!-- <div>First div</div> -->
 
