--- a/part-2-browser-document-events-interfaces/document/resume/tasks/search-for-elements.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/search-for-elements.html
@@ -68,5 +68,13 @@
         value="Search!"
       />
     </form>
+
+    <script>
+      const table = document.getElementById("age-table");
+      console.log(table);
+      console.log(table.querySelectorAll("label"));
+      console.log(table.querySelector("td").innerHTML);
+      console.log(document.getElementsByName("search")[0]);
+    </script>
   </body>
 </html>
