--- a/part-2-browser-document-events-interfaces/document/resume/element-size-and-scrolling.html
+++ b/part-2-browser-document-events-interfaces/document/resume/element-size-and-scrolling.html
@@ -13,7 +13,7 @@
         overflow: auto;
         border: 25px solid lightblue;
         padding: 20px;
-        /* white-space: nowrap; */
+        white-space: nowrap;
       }
     </style>
   </head>
