--- a/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
+++ b/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
@@ -12,7 +12,7 @@
         overflow: auto;
         border: 25px solid lightblue;
         padding: 20px;
-        /* white-space: nowrap; */
+        white-space: nowrap;
       }
 
       #fixed {
