--- a/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
+++ b/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
@@ -12,7 +12,7 @@
         overflow: auto;
         border: 25px solid lightblue;
         padding: 20px;
-        /* white-space: nowrap; */
+        white-space: nowrap;
       }
 
       #fixed {
@@ -76,6 +76,21 @@
       Scroll to bottom
     </button>
 
+    <p>
+      <button
+        onclick="handleScrollToLeft()"
+        type="button"
+      >
+        Scroll to left
+      </button>
+      <button
+        onclick="handleScrollToRight()"
+        type="button"
+      >
+        Scroll to right
+      </button>
+    </p>
+
     <script>
       function showScrollTop(elem) {
         console.log(elem.scrollTop, elem.scrollLeft);
@@ -95,6 +110,14 @@
 
       function scrollToBottom() {
         document.querySelector("#example").scrollTop = 1e9;
+      }
+
+      function handleScrollToLeft() {
+        document.querySelector("#example").scrollLeft = 0;
+      }
+
+      function handleScrollToRight() {
+        document.querySelector("#example").scrollLeft = 1e9;
       }
     </script>
 
