Element size and scrolling

--- a/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
+++ b/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
@@ -23,6 +23,7 @@
     </style>
   </head>
   <body>
+    <h2>Don't take width/height from CSS</h2>
     <div
       id="example"
       onscroll="showScrollTop(this)"
