Element size and scrolling

--- a/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
+++ b/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
@@ -23,7 +23,6 @@
     </style>
   </head>
   <body>
-    <h2>Don't take width/height from CSS</h2>
     <div
       id="example"
       onscroll="showScrollTop(this)"
@@ -62,22 +61,22 @@
         2002.
       </p>
     </div>
-
+    <!-- 
     <button
       type="button"
       onclick="scrollToTop()"
     >
       Scroll to top
-    </button>
+    </button> -->
 
-    <button
+    <!-- <button
       type="button"
       onclick="scrollToBottom()"
     >
       Scroll to bottom
-    </button>
+    </button> -->
 
-    <p>
+    <!-- <p>
       <button
         onclick="handleScrollToLeft()"
         type="button"
@@ -90,9 +89,9 @@
       >
         Scroll to right
       </button>
-    </p>
+    </p> -->
 
-    <script>
+    <!-- <script>
       function showScrollTop(elem) {
         console.log(elem.scrollTop, elem.scrollLeft);
       }
@@ -120,7 +119,7 @@
       function handleScrollToRight() {
         document.querySelector("#example").scrollLeft = 1e9;
       }
-    </script>
+    </script> -->
 
     <!-- <button
       type="button"
