Element size and scrolling

--- a/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
+++ b/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
@@ -61,6 +61,17 @@
         2002.
       </p>
     </div>
+
+    <script>
+      const example = document.querySelector("#example");
+      console.log(example);
+    </script>
+
+    <!-- <script>
+      const body = document.body;
+      console.log(getComputedStyle(body).width);
+    </script> -->
+
     <!-- 
     <button
       type="button"
