Element size and scrolling

--- a/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
+++ b/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
@@ -13,7 +13,7 @@
         border: 25px solid lightblue;
         padding: 20px;
         white-space: nowrap;
-        box-sizing: border-box;
+        /* box-sizing: border-box; */
       }
 
       #fixed {
@@ -66,7 +66,8 @@
     <script>
       const example = document.querySelector("#example");
       console.log(example.clientWidth);
-      console.log(300 - 25 * 2 - 16);
+      console.log(example.offsetWidth - 25 * 2 - 0);
+      // console.log(300 - 25 * 2 - 16);
       console.log(example.offsetWidth);
     </script>
 
