Element size and scrolling

--- a/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
+++ b/part-2-browser-document-events-interfaces/document/resume/offset-parent.html
@@ -63,7 +63,7 @@
       </p>
     </div>
 
-    <p><b>Hello, how are you?</b></p>
+    <p><b>Hello</b></p>
 
     <script>
       const b = document.querySelector("b");
